// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CvComponents /> <CvSection /> Rendering component Rendering with locale EN 1`] = `
<div
  className="sc-gZMcBi giNnHm"
>
  <div
    className="MuiGrid-container-1 MuiGrid-spacing-xs-8-23 MuiGrid-direction-xs-column-4"
  >
    <div
      className="MuiGrid-item-2"
    >
      <h4
        className="MuiTypography-root-98 MuiTypography-h4-113 MuiTypography-alignCenter-121"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-briefcase fa-w-16 "
          data-icon="briefcase"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M320 336c0 8.84-7.16 16-16 16h-96c-8.84 0-16-7.16-16-16v-48H0v144c0 25.6 22.4 48 48 48h416c25.6 0 48-22.4 48-48V288H320v48zm144-208h-80V80c0-25.6-22.4-48-48-48H176c-25.6 0-48 22.4-48 48v48H48c-25.6 0-48 22.4-48 48v80h512v-80c0-25.6-22.4-48-48-48zm-144 0H192V96h128v32z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <span>
           
        </span>
        <span>
          Experiences
        </span>
      </h4>
    </div>
    <div
      className="MuiGrid-item-2"
    >
      <div
        className="MuiGrid-container-1 MuiGrid-direction-xs-column-4 MuiGrid-justify-xs-center-18"
      >
        <div
          className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
        >
          <div
            className="sc-bwzfXH uTxCW"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
            >
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-3-60 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-3-88"
              >
                <div
                  className="sc-htpNat jeDJyY"
                >
                  <h6
                    className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignRight-122"
                  >
                    <span>
                      <span>
                        April 2018
                      </span>
                      <span>
                        ⇀
                      </span>
                      <span>
                        Now
                      </span>
                    </span>
                  </h6>
                </div>
              </div>
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-9-66 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-9-94"
              >
                <div
                  className="sc-bxivhb bUZGRr"
                >
                  <div
                    className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24 MuiGrid-align-items-xs-center-9"
                  >
                    <div
                      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
                    >
                      <div
                        className="sc-ifAKCX cFlEyZ"
                      >
                        <div
                          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
                        >
                          <div
                            className="MuiGrid-item-2"
                          >
                            <h6
                              className="MuiTypography-root-98 MuiTypography-subtitle2-117"
                            >
                              <span>
                                <b>
                                  Wemanity
                                </b>
                                , 
                                <i>
                                  Agile Consultant Developer R&D
                                </i>
                                , Paris (France).
                              </span>
                            </h6>
                          </div>
                          <div
                            className="MuiGrid-item-2"
                          >
                            <p
                              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
                            >
                              <span>
                                Fullstack R&D developer at the Société Générale's Innovation Lab Innov8. In charge of developments of innovative prototypes and demonstrator incorporating 3D/VR, cognitive services, smart home or robots for internal use cases. Stack: ES6, ReactJS, Three.js, Loopback, Python, Docker, OpenShift.
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
        >
          <div
            className="sc-bwzfXH uTxCW"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
            >
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-3-60 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-3-88"
              >
                <div
                  className="sc-htpNat jeDJyY"
                >
                  <h6
                    className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignRight-122"
                  >
                    <span>
                      <span>
                        October 2016
                      </span>
                      <span>
                        ⇀
                      </span>
                      <span>
                        February 2018
                      </span>
                    </span>
                  </h6>
                </div>
              </div>
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-9-66 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-9-94"
              >
                <div
                  className="sc-bxivhb bUZGRr"
                >
                  <div
                    className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24 MuiGrid-align-items-xs-center-9"
                  >
                    <div
                      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
                    >
                      <div
                        className="sc-ifAKCX cFlEyZ"
                      >
                        <div
                          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
                        >
                          <div
                            className="MuiGrid-item-2"
                          >
                            <h6
                              className="MuiTypography-root-98 MuiTypography-subtitle2-117"
                            >
                              <span>
                                <b>
                                  Dhatim
                                </b>
                                , 
                                <i>
                                  R&D Java Developer
                                </i>
                                , Paris (France).
                              </span>
                            </h6>
                          </div>
                          <div
                            className="MuiGrid-item-2"
                          >
                            <p
                              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
                            >
                              <span>
                                Backend developer for Conciliator For Pay, SaaS solution for French pay control quality. Team of 5 persons: 2 frontend, 2 backend, 1 PO working in Scrum methodology. Stack: Java 8 SE, Dropwizard, PostgreSQL, Docker, Git, Jenkins.
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
        >
          <div
            className="sc-bwzfXH uTxCW"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
            >
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-3-60 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-3-88"
              >
                <div
                  className="sc-htpNat jeDJyY"
                >
                  <h6
                    className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignRight-122"
                  >
                    <span>
                      <span>
                        March 2015
                      </span>
                      <span>
                        ⇀
                      </span>
                      <span>
                        October 2016
                      </span>
                    </span>
                  </h6>
                </div>
              </div>
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-9-66 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-9-94"
              >
                <div
                  className="sc-bxivhb bUZGRr"
                >
                  <div
                    className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24 MuiGrid-align-items-xs-center-9"
                  >
                    <div
                      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
                    >
                      <div
                        className="sc-ifAKCX cFlEyZ"
                      >
                        <div
                          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
                        >
                          <div
                            className="MuiGrid-item-2"
                          >
                            <h6
                              className="MuiTypography-root-98 MuiTypography-subtitle2-117"
                            >
                              <span>
                                <b>
                                  Visian
                                </b>
                                , 
                                <i>
                                  Lead Developer & Fablab Supervisor
                                </i>
                                , Paris (France).
                              </span>
                            </h6>
                          </div>
                          <div
                            className="MuiGrid-item-2"
                          >
                            <p
                              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
                            >
                              <span>
                                Lead developer at Visian, Neurones IT's Business Unit specialised in prototyping use cases using IoT. In charge of the developers' team. Building proof of concept (PoC) from scratch or using various kind of IoT (mobile, beacons, wearables, Raspberry, NFC, sensors...), and transmitting data into the cloud.
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
        >
          <div
            className="sc-bwzfXH uTxCW"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
            >
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-3-60 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-3-88"
              >
                <div
                  className="sc-htpNat jeDJyY"
                >
                  <h6
                    className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignRight-122"
                  >
                    <span>
                      <span>
                        September 2014
                      </span>
                      <span>
                        ⇀
                      </span>
                      <span>
                        March 2015
                      </span>
                    </span>
                  </h6>
                </div>
              </div>
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-9-66 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-9-94"
              >
                <div
                  className="sc-bxivhb bUZGRr"
                >
                  <div
                    className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24 MuiGrid-align-items-xs-center-9"
                  >
                    <div
                      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
                    >
                      <div
                        className="sc-ifAKCX cFlEyZ"
                      >
                        <div
                          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
                        >
                          <div
                            className="MuiGrid-item-2"
                          >
                            <h6
                              className="MuiTypography-root-98 MuiTypography-subtitle2-117"
                            >
                              <span>
                                <b>
                                  SII
                                </b>
                                , 
                                <i>
                                  Head Of Innovation Assistant
                                </i>
                                , Paris (France).
                              </span>
                            </h6>
                          </div>
                          <div
                            className="MuiGrid-item-2"
                          >
                            <p
                              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
                            >
                              <span>
                                Study of open source drones like the Crazyflie project and hardware customisation. Prototyping an embedded case for cooling trucks using a Raspberry Pi and various sensors (temperature, pressure, GPS...), data are transmitted over MQTT to the driver's phone. Stack: C, Java 8 ME for IoT, MQTT.
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
        >
          <div
            className="sc-bwzfXH uTxCW"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
            >
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-3-60 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-3-88"
              >
                <div
                  className="sc-htpNat jeDJyY"
                >
                  <h6
                    className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignRight-122"
                  >
                    <span>
                      <span>
                        April 2013
                      </span>
                      <span>
                        ⇀
                      </span>
                      <span>
                        August 2013
                      </span>
                    </span>
                  </h6>
                </div>
              </div>
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-9-66 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-9-94"
              >
                <div
                  className="sc-bxivhb bUZGRr"
                >
                  <div
                    className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24 MuiGrid-align-items-xs-center-9"
                  >
                    <div
                      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
                    >
                      <div
                        className="sc-ifAKCX cFlEyZ"
                      >
                        <div
                          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
                        >
                          <div
                            className="MuiGrid-item-2"
                          >
                            <h6
                              className="MuiTypography-root-98 MuiTypography-subtitle2-117"
                            >
                              <span>
                                <b>
                                  Thales
                                </b>
                                , 
                                <i>
                                  Intern DevOps
                                </i>
                                , Paris (France).
                              </span>
                            </h6>
                          </div>
                          <div
                            className="MuiGrid-item-2"
                          >
                            <p
                              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
                            >
                              <span>
                                In charge of the study, install and deployment of OpenStack in a test environment. Writing documentation for users, deployment scripts (Bash), VM image templates, tests and validations.
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
        >
          <div
            className="sc-bwzfXH uTxCW"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
            >
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-3-60 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-3-88"
              >
                <div
                  className="sc-htpNat jeDJyY"
                >
                  <h6
                    className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignRight-122"
                  >
                    <span>
                      <span>
                        October 2012
                      </span>
                      <span>
                        ⇀
                      </span>
                      <span>
                        April 2013
                      </span>
                    </span>
                  </h6>
                </div>
              </div>
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-9-66 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-9-94"
              >
                <div
                  className="sc-bxivhb bUZGRr"
                >
                  <div
                    className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24 MuiGrid-align-items-xs-center-9"
                  >
                    <div
                      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
                    >
                      <div
                        className="sc-ifAKCX cFlEyZ"
                      >
                        <div
                          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
                        >
                          <div
                            className="MuiGrid-item-2"
                          >
                            <h6
                              className="MuiTypography-root-98 MuiTypography-subtitle2-117"
                            >
                              <span>
                                <b>
                                  Novacom
                                </b>
                                , 
                                <i>
                                  Java Developer Trainee
                                </i>
                                , Paris (France).
                              </span>
                            </h6>
                          </div>
                          <div
                            className="MuiGrid-item-2"
                          >
                            <p
                              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
                            >
                              <span>
                                Java internship, attached to the developers team. Development of unit and functionnal tests with the correct dataset.
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CvComponents /> <CvSection /> Rendering component Rendering with locale FR 1`] = `
<div
  className="sc-gZMcBi giNnHm"
>
  <div
    className="MuiGrid-container-1 MuiGrid-spacing-xs-8-23 MuiGrid-direction-xs-column-4"
  >
    <div
      className="MuiGrid-item-2"
    >
      <h4
        className="MuiTypography-root-98 MuiTypography-h4-113 MuiTypography-alignCenter-121"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-briefcase fa-w-16 "
          data-icon="briefcase"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M320 336c0 8.84-7.16 16-16 16h-96c-8.84 0-16-7.16-16-16v-48H0v144c0 25.6 22.4 48 48 48h416c25.6 0 48-22.4 48-48V288H320v48zm144-208h-80V80c0-25.6-22.4-48-48-48H176c-25.6 0-48 22.4-48 48v48H48c-25.6 0-48 22.4-48 48v80h512v-80c0-25.6-22.4-48-48-48zm-144 0H192V96h128v32z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <span>
           
        </span>
        <span>
          Expériences professionnelles
        </span>
      </h4>
    </div>
    <div
      className="MuiGrid-item-2"
    >
      <div
        className="MuiGrid-container-1 MuiGrid-direction-xs-column-4 MuiGrid-justify-xs-center-18"
      >
        <div
          className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
        >
          <div
            className="sc-bwzfXH uTxCW"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
            >
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-3-60 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-3-88"
              >
                <div
                  className="sc-htpNat jeDJyY"
                >
                  <h6
                    className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignRight-122"
                  >
                    <span>
                      <span>
                        avril 2018
                      </span>
                      <span>
                        ⇀
                      </span>
                      <span>
                        Maintenant
                      </span>
                    </span>
                  </h6>
                </div>
              </div>
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-9-66 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-9-94"
              >
                <div
                  className="sc-bxivhb bUZGRr"
                >
                  <div
                    className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24 MuiGrid-align-items-xs-center-9"
                  >
                    <div
                      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
                    >
                      <div
                        className="sc-ifAKCX cFlEyZ"
                      >
                        <div
                          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
                        >
                          <div
                            className="MuiGrid-item-2"
                          >
                            <h6
                              className="MuiTypography-root-98 MuiTypography-subtitle2-117"
                            >
                              <span>
                                <b>
                                  Wemanity
                                </b>
                                , 
                                <i>
                                  Agile Consultant Developer R&D
                                </i>
                                , Paris (France)
                              </span>
                            </h6>
                          </div>
                          <div
                            className="MuiGrid-item-2"
                          >
                            <p
                              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
                            >
                              <span>
                                Développeur R&D fullstack au sein du Lab Innovation Innov8 de la Société Générale. En charge de développer des PoC innovants autour de la 3D/VR pour de la modélisation de données complexes. Étude et développement d'applications autour des robots Pepper de Softbank Robotics pour des évènements et cas d'usage internes. Stack technique: ES6, ReactJS, Three.js, Loopback, Python, Docker, OpenShift.
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
        >
          <div
            className="sc-bwzfXH uTxCW"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
            >
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-3-60 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-3-88"
              >
                <div
                  className="sc-htpNat jeDJyY"
                >
                  <h6
                    className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignRight-122"
                  >
                    <span>
                      <span>
                        octobre 2016
                      </span>
                      <span>
                        ⇀
                      </span>
                      <span>
                        février 2018
                      </span>
                    </span>
                  </h6>
                </div>
              </div>
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-9-66 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-9-94"
              >
                <div
                  className="sc-bxivhb bUZGRr"
                >
                  <div
                    className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24 MuiGrid-align-items-xs-center-9"
                  >
                    <div
                      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
                    >
                      <div
                        className="sc-ifAKCX cFlEyZ"
                      >
                        <div
                          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
                        >
                          <div
                            className="MuiGrid-item-2"
                          >
                            <h6
                              className="MuiTypography-root-98 MuiTypography-subtitle2-117"
                            >
                              <span>
                                <b>
                                  Dhatim
                                </b>
                                , 
                                <i>
                                  R&D Java Developer
                                </i>
                                , Paris (France)
                              </span>
                            </h6>
                          </div>
                          <div
                            className="MuiGrid-item-2"
                          >
                            <p
                              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
                            >
                              <span>
                                Développeur backend attaché à l'équipe de Conciliator For Pay, solution en SaaS de contrôle de DSN (Déclaration Sociale Nominative) pour les entreprises. Équipe composée de 5 personnes: 2 front, 2 back, 1 PO en méthode Scrum. Stack technique: Java 8 Core, Dropwizard, PostgreSQL, Docker, Git, Jenkins.
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
        >
          <div
            className="sc-bwzfXH uTxCW"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
            >
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-3-60 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-3-88"
              >
                <div
                  className="sc-htpNat jeDJyY"
                >
                  <h6
                    className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignRight-122"
                  >
                    <span>
                      <span>
                        mars 2015
                      </span>
                      <span>
                        ⇀
                      </span>
                      <span>
                        octobre 2016
                      </span>
                    </span>
                  </h6>
                </div>
              </div>
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-9-66 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-9-94"
              >
                <div
                  className="sc-bxivhb bUZGRr"
                >
                  <div
                    className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24 MuiGrid-align-items-xs-center-9"
                  >
                    <div
                      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
                    >
                      <div
                        className="sc-ifAKCX cFlEyZ"
                      >
                        <div
                          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
                        >
                          <div
                            className="MuiGrid-item-2"
                          >
                            <h6
                              className="MuiTypography-root-98 MuiTypography-subtitle2-117"
                            >
                              <span>
                                <b>
                                  Visian
                                </b>
                                , 
                                <i>
                                  Lead Developer & Fablab Supervisor
                                </i>
                                , Paris (France)
                              </span>
                            </h6>
                          </div>
                          <div
                            className="MuiGrid-item-2"
                          >
                            <p
                              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
                            >
                              <span>
                                Lead Dev & Lead Tech chez Visian, la BU Innovation autour des objets connectés de Neurones IT. Responsable de l'équipe des développeurs (hard & soft). Réalisation et développement de PoC en méthodes agiles mêlant IoT (beacons, wearables, Raspberry, tags NFC, capteurs...) et cloud pour la remontée de données.
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
        >
          <div
            className="sc-bwzfXH uTxCW"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
            >
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-3-60 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-3-88"
              >
                <div
                  className="sc-htpNat jeDJyY"
                >
                  <h6
                    className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignRight-122"
                  >
                    <span>
                      <span>
                        septembre 2014
                      </span>
                      <span>
                        ⇀
                      </span>
                      <span>
                        mars 2015
                      </span>
                    </span>
                  </h6>
                </div>
              </div>
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-9-66 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-9-94"
              >
                <div
                  className="sc-bxivhb bUZGRr"
                >
                  <div
                    className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24 MuiGrid-align-items-xs-center-9"
                  >
                    <div
                      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
                    >
                      <div
                        className="sc-ifAKCX cFlEyZ"
                      >
                        <div
                          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
                        >
                          <div
                            className="MuiGrid-item-2"
                          >
                            <h6
                              className="MuiTypography-root-98 MuiTypography-subtitle2-117"
                            >
                              <span>
                                <b>
                                  SII
                                </b>
                                , 
                                <i>
                                  Head Of Innovation Assistant
                                </i>
                                , Paris (France)
                              </span>
                            </h6>
                          </div>
                          <div
                            className="MuiGrid-item-2"
                          >
                            <p
                              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
                            >
                              <span>
                                Étude et exploration des drones Open Source tels que le projet Crazyflie. Réalisation d’un prototype d'objet connecté à partir d’un Raspberry Pi et de divers capteurs (température, pression, GPS). Développement avec le SDK Java 8 Embedded ME for IoT, et remontée des données.
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
        >
          <div
            className="sc-bwzfXH uTxCW"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
            >
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-3-60 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-3-88"
              >
                <div
                  className="sc-htpNat jeDJyY"
                >
                  <h6
                    className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignRight-122"
                  >
                    <span>
                      <span>
                        avril 2013
                      </span>
                      <span>
                        ⇀
                      </span>
                      <span>
                        août 2013
                      </span>
                    </span>
                  </h6>
                </div>
              </div>
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-9-66 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-9-94"
              >
                <div
                  className="sc-bxivhb bUZGRr"
                >
                  <div
                    className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24 MuiGrid-align-items-xs-center-9"
                  >
                    <div
                      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
                    >
                      <div
                        className="sc-ifAKCX cFlEyZ"
                      >
                        <div
                          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
                        >
                          <div
                            className="MuiGrid-item-2"
                          >
                            <h6
                              className="MuiTypography-root-98 MuiTypography-subtitle2-117"
                            >
                              <span>
                                <b>
                                  Thales
                                </b>
                                , 
                                <i>
                                  Intern DevOps
                                </i>
                                , Paris (France)
                              </span>
                            </h6>
                          </div>
                          <div
                            className="MuiGrid-item-2"
                          >
                            <p
                              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
                            >
                              <span>
                                Responsable de l'étude, de l'installation et du déploiement d'OpenStack dans un environnement de tests. Rédaction du dossier d’architecture matérielle, réalisation des scripts de déploiement automatique, tests et validations.
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
        >
          <div
            className="sc-bwzfXH uTxCW"
          >
            <div
              className="MuiGrid-container-1 MuiGrid-align-items-xs-baseline-12"
            >
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-3-60 MuiGrid-grid-lg-3-74 MuiGrid-grid-xl-3-88"
              >
                <div
                  className="sc-htpNat jeDJyY"
                >
                  <h6
                    className="MuiTypography-root-98 MuiTypography-subtitle1-116 MuiTypography-alignRight-122"
                  >
                    <span>
                      <span>
                        octobre 2012
                      </span>
                      <span>
                        ⇀
                      </span>
                      <span>
                        avril 2013
                      </span>
                    </span>
                  </h6>
                </div>
              </div>
              <div
                className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-9-66 MuiGrid-grid-lg-9-80 MuiGrid-grid-xl-9-94"
              >
                <div
                  className="sc-bxivhb bUZGRr"
                >
                  <div
                    className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24 MuiGrid-align-items-xs-center-9"
                  >
                    <div
                      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-12-55 MuiGrid-grid-md-12-69 MuiGrid-grid-lg-12-83 MuiGrid-grid-xl-12-97"
                    >
                      <div
                        className="sc-ifAKCX cFlEyZ"
                      >
                        <div
                          className="MuiGrid-container-1 MuiGrid-direction-xs-column-4"
                        >
                          <div
                            className="MuiGrid-item-2"
                          >
                            <h6
                              className="MuiTypography-root-98 MuiTypography-subtitle2-117"
                            >
                              <span>
                                <b>
                                  Novacom
                                </b>
                                , 
                                <i>
                                  Java Developer Trainee
                                </i>
                                , Paris (France)
                              </span>
                            </h6>
                          </div>
                          <div
                            className="MuiGrid-item-2"
                          >
                            <p
                              className="MuiTypography-root-98 MuiTypography-body2-106 MuiTypography-alignJustify-123"
                            >
                              <span>
                                Développement d'un jeu de données et d'un ensemble de tests unitaires et fonctionnels sur la couche service des applications, permettant l’automatisation des validations logicielles et ainsi garantir la non régression pendant les développements.
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
